--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Placement Predictor</title>
+    <title>House Price Prediction</title>
     <style> 
         /* Estilo para centralizar o conteúdo */
         body {
